fix code blocks overflowing page on small screens2

--- a/src/components/RichText/RichText.sass
+++ b/src/components/RichText/RichText.sass
@@ -16,6 +16,8 @@
     background-color: var(--level1)
     color: var(--foreground)
   pre
+    overflow: scroll
+    max-width: calc(100vw - 64px)
     padding: 16px
     background-color: var(--level1)
     border-radius: 4px
